moved bytecodeview to its own package and extracted inner classes